[package]
name = 'server-axum'
version = '0.1.0'
edition = '2021'
[dependencies.async-session]
version = '3.0.0'

[dependencies.axum]
version = '0.5'
features = ['headers', 'http2', 'json']

[dependencies.axum-server]
version = '0.4'
features = ['tls-rustls']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.tokio]
version = '1.20'
features = ['rt-multi-thread']

[dependencies.tower-http]
version = '0.3'
features = [
    'compression-br',
    'fs',
    'trace',
]

[dependencies.tracing]
version = '0.1'

[dependencies.tracing-subscriber]
version = '0.3'
features = ['env-filter']

[dependencies.uuid]
version = '1.1.2'
features = [
    'v4',
    'serde',
]
